--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lucide-react": "^0.376.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-responsive-modal": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
